WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146592
Fix the !ENABLE(VIDEO) build after
r186054
https://bugs.webkit.org/show_bug.cgi?id=146592
Summary
Fix the !ENABLE(VIDEO) build after r186054
Csaba Osztrogonác
Reported
2015-07-03 07:34:45 PDT
error log: ../../Source/WebCore/platform/MemoryPressureHandler.cpp: In member function 'void WebCore::MemoryPressureHandler::releaseCriticalMemory(WebCore::Synchronous)': ../../Source/WebCore/platform/MemoryPressureHandler.cpp:148:34: error: incomplete type 'WebCore::HTMLMediaElement' used in nested name specifier
Attachments
Patch
(1.63 KB, patch)
2015-07-03 07:35 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-07-03 07:35:36 PDT
Created
attachment 256102
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-03 11:42:30 PDT
Comment on
attachment 256102
[details]
Patch Clearing flags on attachment: 256102 Committed
r186261
: <
http://trac.webkit.org/changeset/186261
>
WebKit Commit Bot
Comment 3
2015-07-03 11:42:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug