Fix the !ENABLE(VIDEO) build after r186054 https://bugs.webkit.org/show_bug.cgi?id=146592

Reviewed by Eric Carlson.

* platform/MemoryPressureHandler.cpp:
(WebCore::MemoryPressureHandler::releaseCriticalMemory):


Canonical link: https://commits.webkit.org/164673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186261 268f45cc-cd09-0410-ab3c-d52691b4dbfc