Source/WebCore/platform/MemoryPressureHandler.cpp
@@ -143,6 +143,7 @@ void MemoryPressureHandler::releaseCriticalMemory(Synchronous synchronous)
         FontCache::singleton().invalidate();
     }
 
+#if ENABLE(VIDEO)
     {
         ReliefLogger log("Dropping buffered data from paused media elements");
         for (auto* mediaElement: HTMLMediaElement::allMediaElements()) {
@@ -150,6 +151,7 @@ void MemoryPressureHandler::releaseCriticalMemory(Synchronous synchronous)
                 mediaElement->purgeBufferedDataIfPossible();
         }
     }
+#endif
 
     if (synchronous == Synchronous::Yes) {
         ReliefLogger log("Collecting JavaScript garbage");
